--- a/mobirise-now(design)/About-Us.html
+++ b/mobirise-now(design)/About-Us.html
@@ -46,22 +46,22 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item dropdown">
-                    <a class="nav-link link text-white dropdown-toggle display-4" href="page3.html" data-toggle="dropdown-submenu" aria-expanded="false"><span class="mbri-star mbr-iconfont mbr-iconfont-btn"></span>
-                        Project</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="Project-Overview.html">Overview<br></a><a class="text-white dropdown-item display-4" href="Basic-Parts.html">Basic Parts</a></div>
+            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item dropdown open">
+                    <a class="nav-link link text-white dropdown-toggle display-4" href="page3.html" data-toggle="dropdown-submenu" aria-expanded="true"><span class="mbri-star mbr-iconfont mbr-iconfont-btn"></span>
+                        Project</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="Project-Overview.html">Description</a><a class="text-white dropdown-item display-4" href="Basic-Parts.html">&nbsp;Parts</a><a class="text-white dropdown-item display-4" href="page3.html" aria-expanded="true">Collaboration</a></div>
                 </li>
-                <li class="nav-item dropdown">
+                <li class="nav-item dropdown open"><a class="nav-link link text-white display-4" href="page5.html" aria-expanded="true"><span class="mbri-idea mbr-iconfont mbr-iconfont-btn"></span>
+                        Human Practice</a></li><li class="nav-item dropdown"><a class="nav-link link text-white display-4" href="page1.html" aria-expanded="true"><span class="mbri-growing-chart mbr-iconfont mbr-iconfont-btn"></span>
+                        Modelling</a></li><li class="nav-item dropdown">
                     <a class="nav-link link text-white dropdown-toggle display-4" href="page4.html" data-toggle="dropdown-submenu" aria-expanded="false"><span class="mbri-quote-left mbr-iconfont mbr-iconfont-btn"></span>
                         Experiments</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="BasicParts.html">Over View</a><a class="text-white dropdown-item display-4" href="Project-Constraction.html" aria-expanded="false">Constraction</a><a class="text-white dropdown-item display-4" href="Particle-Production.html" aria-expanded="false">Particle Production<br></a><a class="text-white dropdown-item display-4" href="Functional-Evaluation.html" aria-expanded="false">Fuctional Evaluation of Particle</a><a class="text-white dropdown-item display-4" href="InterLab.html" aria-expanded="false">InterLab</a></div>
-                </li><li class="nav-item dropdown open"><a class="nav-link link text-white dropdown-toggle display-4" href="page5.html" aria-expanded="true" data-toggle="dropdown-submenu"><span class="mbri-idea mbr-iconfont mbr-iconfont-btn"></span>
-                        Human Practice</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="HP-meeting.html" aria-expanded="false">Silver</a><a class="text-white dropdown-item display-4" href="page5.html" aria-expanded="false">Gold</a><a class="text-white dropdown-item display-4" href="page5.html" aria-expanded="false">lecture</a></div></li><li class="nav-item dropdown"><a class="nav-link link text-white dropdown-toggle display-4" href="page1.html" data-toggle="dropdown-submenu" aria-expanded="false"><span class="mbri-growing-chart mbr-iconfont mbr-iconfont-btn"></span>
-                        Modelling</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="page1.html">Over View</a></div></li><li class="nav-item dropdown"><a class="nav-link link text-white dropdown-toggle display-4" href="page6.html" data-toggle="dropdown-submenu" aria-expanded="false"><span class="mbri-rocket mbr-iconfont mbr-iconfont-btn"></span>About Us</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="page6.html">Team<br></a><a class="text-white dropdown-item display-4" href="page6.html" aria-expanded="false">Sponsor</a><a class="text-white dropdown-item display-4" href="page6.html" aria-expanded="false">nanda</a></div></li></ul>
+                </li><li class="nav-item dropdown"><a class="nav-link link text-white dropdown-toggle display-4" href="page6.html" data-toggle="dropdown-submenu" aria-expanded="false"><span class="mbri-rocket mbr-iconfont mbr-iconfont-btn"></span>About Us</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="page6.html">Team<br></a><a class="text-white dropdown-item display-4" href="page6.html" aria-expanded="false">attribution</a></div></li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="mbr-section content4 cid-r5eK171VBO" id="content4-1g">
+<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section class="mbr-section content4 cid-r5eK171VBO" id="content4-1g">
 
     
 
