--- a/mobirise-now(design)/HP-localschool.html
+++ b/mobirise-now(design)/HP-localschool.html
@@ -47,22 +47,22 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item dropdown">
-                    <a class="nav-link link text-white dropdown-toggle display-4" href="page3.html" data-toggle="dropdown-submenu" aria-expanded="false"><span class="mbri-star mbr-iconfont mbr-iconfont-btn"></span>
-                        Project</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="Project-Overview.html">Overview<br></a><a class="text-white dropdown-item display-4" href="Basic-Parts.html">Basic Parts</a></div>
+            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item dropdown open">
+                    <a class="nav-link link text-white dropdown-toggle display-4" href="page3.html" data-toggle="dropdown-submenu" aria-expanded="true"><span class="mbri-star mbr-iconfont mbr-iconfont-btn"></span>
+                        Project</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="Project-Overview.html">Description</a><a class="text-white dropdown-item display-4" href="Basic-Parts.html">&nbsp;Parts</a><a class="text-white dropdown-item display-4" href="page3.html" aria-expanded="true">Collaboration</a></div>
                 </li>
-                <li class="nav-item dropdown">
+                <li class="nav-item dropdown open"><a class="nav-link link text-white display-4" href="page5.html" aria-expanded="true"><span class="mbri-idea mbr-iconfont mbr-iconfont-btn"></span>
+                        Human Practice</a></li><li class="nav-item dropdown"><a class="nav-link link text-white display-4" href="page1.html" aria-expanded="true"><span class="mbri-growing-chart mbr-iconfont mbr-iconfont-btn"></span>
+                        Modelling</a></li><li class="nav-item dropdown">
                     <a class="nav-link link text-white dropdown-toggle display-4" href="page4.html" data-toggle="dropdown-submenu" aria-expanded="false"><span class="mbri-quote-left mbr-iconfont mbr-iconfont-btn"></span>
                         Experiments</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="BasicParts.html">Over View</a><a class="text-white dropdown-item display-4" href="Project-Constraction.html" aria-expanded="false">Constraction</a><a class="text-white dropdown-item display-4" href="Particle-Production.html" aria-expanded="false">Particle Production<br></a><a class="text-white dropdown-item display-4" href="Functional-Evaluation.html" aria-expanded="false">Fuctional Evaluation of Particle</a><a class="text-white dropdown-item display-4" href="InterLab.html" aria-expanded="false">InterLab</a></div>
-                </li><li class="nav-item dropdown open"><a class="nav-link link text-white dropdown-toggle display-4" href="page5.html" aria-expanded="true" data-toggle="dropdown-submenu"><span class="mbri-idea mbr-iconfont mbr-iconfont-btn"></span>
-                        Human Practice</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="HP-meeting.html" aria-expanded="false">Silver</a><a class="text-white dropdown-item display-4" href="page5.html" aria-expanded="false">Gold</a><a class="text-white dropdown-item display-4" href="page5.html" aria-expanded="false">lecture</a></div></li><li class="nav-item dropdown"><a class="nav-link link text-white dropdown-toggle display-4" href="page1.html" data-toggle="dropdown-submenu" aria-expanded="false"><span class="mbri-growing-chart mbr-iconfont mbr-iconfont-btn"></span>
-                        Modelling</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="page1.html">Over View</a></div></li><li class="nav-item dropdown"><a class="nav-link link text-white dropdown-toggle display-4" href="page6.html" data-toggle="dropdown-submenu" aria-expanded="false"><span class="mbri-rocket mbr-iconfont mbr-iconfont-btn"></span>About Us</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="page6.html">Team<br></a><a class="text-white dropdown-item display-4" href="page6.html" aria-expanded="false">Sponsor</a><a class="text-white dropdown-item display-4" href="page6.html" aria-expanded="false">nanda</a></div></li></ul>
+                </li><li class="nav-item dropdown"><a class="nav-link link text-white dropdown-toggle display-4" href="page6.html" data-toggle="dropdown-submenu" aria-expanded="false"><span class="mbri-rocket mbr-iconfont mbr-iconfont-btn"></span>About Us</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="page6.html">Team<br></a><a class="text-white dropdown-item display-4" href="page6.html" aria-expanded="false">attribution</a></div></li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">free site maker</a></section><section class="mbr-section content5 cid-r5eCVe4qov mbr-parallax-background" id="content5-1a">
+<section class="engine"><a href="https://mobirise.info/s">free bootstrap theme</a></section><section class="mbr-section content5 cid-r5eCVe4qov mbr-parallax-background" id="content5-1a">
 
     
 
@@ -162,7 +162,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="HqYNSnVLMXgQAdJAoU/72awJsoslI6/WyBA/OVNz0w6srHERQoyjwNAfoa0KbYKs+Ni9P5oiv86P/CTomX0VOx2xe4tMIgpB5lxEjPqcexOAisR1rq885P4/MNUpIKAY" data-form-email="true">
+                        <input type="hidden" value="0eyHo9CT/B55/cpz17y0uH6beqJN8h1yX3VCSGDfSo3lxeZb9l7BOLdmOTe92gVhrjkINfJzi91HViUE4s8ok6BlmykQySZnYAuncsdkv0CrHo0i7ypmGy060MrQsaVi" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer4-19">
                         </div>
