--- a/mobirise-now(design)/Human-Practice.html
+++ b/mobirise-now(design)/Human-Practice.html
@@ -47,22 +47,22 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item dropdown open">
-                    <a class="nav-link link text-white dropdown-toggle display-4" href="page3.html" data-toggle="dropdown-submenu" aria-expanded="true"><span class="mbri-star mbr-iconfont mbr-iconfont-btn"></span>
-                        Project</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="Project-Overview.html">Description</a><a class="text-white dropdown-item display-4" href="Basic-Parts.html">&nbsp;Parts</a><a class="text-white dropdown-item display-4" href="page3.html" aria-expanded="true">Collaboration</a></div>
+            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item dropdown">
+                    <a class="nav-link link text-white dropdown-toggle display-4" href="page3.html" data-toggle="dropdown-submenu" aria-expanded="false"><span class="mbri-star mbr-iconfont mbr-iconfont-btn"></span>
+                        Project</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="Project-Overview.html">Description</a><a class="text-white dropdown-item display-4" href="Basic-Parts.html">&nbsp;Parts</a><a class="text-white dropdown-item display-4" href="Collaboration.html" aria-expanded="false">Collaboration</a></div>
                 </li>
-                <li class="nav-item dropdown open"><a class="nav-link link text-white display-4" href="page5.html" aria-expanded="true"><span class="mbri-idea mbr-iconfont mbr-iconfont-btn"></span>
-                        Human Practice</a></li><li class="nav-item dropdown"><a class="nav-link link text-white display-4" href="page1.html" aria-expanded="true"><span class="mbri-growing-chart mbr-iconfont mbr-iconfont-btn"></span>
+                <li class="nav-item dropdown"><a class="nav-link link text-white display-4" href="Human-Practice.html" aria-expanded="false"><span class="mbri-idea mbr-iconfont mbr-iconfont-btn"></span>
+                        Human Practice</a></li><li class="nav-item dropdown"><a class="nav-link link text-white display-4" href="Modelling.html" aria-expanded="false"><span class="mbri-growing-chart mbr-iconfont mbr-iconfont-btn"></span>
                         Modelling</a></li><li class="nav-item dropdown">
                     <a class="nav-link link text-white dropdown-toggle display-4" href="page4.html" data-toggle="dropdown-submenu" aria-expanded="false"><span class="mbri-quote-left mbr-iconfont mbr-iconfont-btn"></span>
                         Experiments</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="BasicParts.html">Over View</a><a class="text-white dropdown-item display-4" href="Project-Constraction.html" aria-expanded="false">Constraction</a><a class="text-white dropdown-item display-4" href="Particle-Production.html" aria-expanded="false">Particle Production<br></a><a class="text-white dropdown-item display-4" href="Functional-Evaluation.html" aria-expanded="false">Fuctional Evaluation of Particle</a><a class="text-white dropdown-item display-4" href="InterLab.html" aria-expanded="false">InterLab</a></div>
-                </li><li class="nav-item dropdown"><a class="nav-link link text-white dropdown-toggle display-4" href="page6.html" data-toggle="dropdown-submenu" aria-expanded="false"><span class="mbri-rocket mbr-iconfont mbr-iconfont-btn"></span>About Us</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="page6.html">Team<br></a><a class="text-white dropdown-item display-4" href="page6.html" aria-expanded="false">attribution</a></div></li></ul>
+                </li><li class="nav-item dropdown"><a class="nav-link link text-white dropdown-toggle display-4" href="page6.html" data-toggle="dropdown-submenu" aria-expanded="false"><span class="mbri-rocket mbr-iconfont mbr-iconfont-btn"></span>About Us</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="team.html">Team<br></a><a class="text-white dropdown-item display-4" href="attribution.html" aria-expanded="false">attribution</a></div></li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">free portfolio web templates</a></section><section class="header10 cid-r5eyo6ztXn mbr-fullscreen mbr-parallax-background" id="header10-w">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="header10 cid-r5eyo6ztXn mbr-fullscreen mbr-parallax-background" id="header10-w">
 
     
 
@@ -346,7 +346,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="lmVlc0a1X+81YgIKYxQLHpTnxJ0CX54pmEwW01tlTGA5LkYLu/VOgpOel+4UtuzMWG/YZg7UuvyWzhopiMoGZExRdAtHl+3rFhuXxD+o8eqS/neNCZXBDd8Q1pAKXY8/" data-form-email="true">
+                        <input type="hidden" value="lrZOWyc0p2b+DBA3IuE0DboPPEXNzAIJushXmn043CcQG98GrPG+yz/5mxcgAXF4aKS7DWR8o+TSJ9B6e2RTpum5U9zaY1DUAABSyDkisyi0eExTW1y1j+vIceX6WUfY" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer4-v">
                         </div>
