--- a/mobirise-now(design)/attribution.html
+++ b/mobirise-now(design)/attribution.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/findingflavi-logo-128x52-1.png" type="image/x-icon">
   <meta name="description" content="About Us">
-  <title>About Us</title>
+  <title>Attribution</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -48,20 +48,20 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item dropdown">
                     <a class="nav-link link text-white dropdown-toggle display-4" href="page3.html" data-toggle="dropdown-submenu" aria-expanded="false"><span class="mbri-star mbr-iconfont mbr-iconfont-btn"></span>
-                        Project</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="Project-Overview.html">Description</a><a class="text-white dropdown-item display-4" href="Basic-Parts.html">&nbsp;Parts</a><a class="text-white dropdown-item display-4" href="page3.html" aria-expanded="false">Collaboration</a></div>
+                        Project</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="Project-Overview.html">Description</a><a class="text-white dropdown-item display-4" href="Basic-Parts.html">&nbsp;Parts</a><a class="text-white dropdown-item display-4" href="Collaboration.html" aria-expanded="false">Collaboration</a></div>
                 </li>
                 <li class="nav-item dropdown"><a class="nav-link link text-white display-4" href="Human-Practice.html" aria-expanded="false"><span class="mbri-idea mbr-iconfont mbr-iconfont-btn"></span>
-                        Human Practice</a></li><li class="nav-item dropdown"><a class="nav-link link text-white display-4" href="page1.html" aria-expanded="false"><span class="mbri-growing-chart mbr-iconfont mbr-iconfont-btn"></span>
+                        Human Practice</a></li><li class="nav-item dropdown"><a class="nav-link link text-white display-4" href="Modelling.html" aria-expanded="false"><span class="mbri-growing-chart mbr-iconfont mbr-iconfont-btn"></span>
                         Modelling</a></li><li class="nav-item dropdown">
                     <a class="nav-link link text-white dropdown-toggle display-4" href="page4.html" data-toggle="dropdown-submenu" aria-expanded="false"><span class="mbri-quote-left mbr-iconfont mbr-iconfont-btn"></span>
                         Experiments</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="BasicParts.html">Over View</a><a class="text-white dropdown-item display-4" href="Project-Constraction.html" aria-expanded="false">Constraction</a><a class="text-white dropdown-item display-4" href="Particle-Production.html" aria-expanded="false">Particle Production<br></a><a class="text-white dropdown-item display-4" href="Functional-Evaluation.html" aria-expanded="false">Fuctional Evaluation of Particle</a><a class="text-white dropdown-item display-4" href="InterLab.html" aria-expanded="false">InterLab</a></div>
-                </li><li class="nav-item dropdown"><a class="nav-link link text-white dropdown-toggle display-4" href="page6.html" data-toggle="dropdown-submenu" aria-expanded="false"><span class="mbri-rocket mbr-iconfont mbr-iconfont-btn"></span>About Us</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="page6.html">Team<br></a><a class="text-white dropdown-item display-4" href="page6.html" aria-expanded="false">attribution</a></div></li></ul>
+                </li><li class="nav-item dropdown"><a class="nav-link link text-white dropdown-toggle display-4" href="page6.html" data-toggle="dropdown-submenu" aria-expanded="false"><span class="mbri-rocket mbr-iconfont mbr-iconfont-btn"></span>About Us</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="team.html">Team<br></a><a class="text-white dropdown-item display-4" href="attribution.html" aria-expanded="false">attribution</a></div></li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">responsive site templates</a></section><section class="mbr-section content4 cid-r5eK171VBO" id="content4-1g">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="mbr-section content4 cid-r5eK171VBO" id="content4-1g">
 
     
 
